Fix virtual scroller bugs, improve random jumps resiliency

--- a/src/css/charactersList.css
+++ b/src/css/charactersList.css
@@ -316,6 +316,12 @@
     margin: 5px 0;
 }
 
+#acm_random_button.is-busy {
+    opacity: 0.45;
+    pointer-events: none;
+    cursor: not-allowed;
+}
+
 #charNumber {
     padding: 7px 2px;
     min-width: fit-content;
